# hs-kafka-minimal-example

./: .gitignore  default.nix  hs-kafka-minimal-example.cabal  shell.nix
cmd/: Main.hs
nix/: nixpkgs.json  shared.nix
